# Troop202Website

./: .gitignore  README.md  WORKFLOW_IMPROVEMENTS.md
.github/workflows/: deploy-content.yml  deploy-infrastructure.yml
cloudformation/: README.md  cloudfront.yaml  foundation.yaml  github-actions-iam-policy.json  github-actions-setup.yaml  monitoring.yaml  setup-github-actions.sh  shared-kms-key.yaml  ssl-certificate.yaml  static-website.yaml
keys/: troop202.site.crt  troop202.site.csr  troop202.site.key  troop202.site.pem
route-building/: .gitignore  NEW README.md  PROJECT_SUMMARY.md  README.md  USAGE.md  pyproject.toml  test_optimize.py
route-building/data/: 2025-routes-map.html  2025-test-routes-map.html  2025-tree_requests.csv.manual  2026-routes-map.html
route-building/data/route-exports/: Route-A-GoogleMaps.txt
route-building/src/: adjust_routes.py  cluster_routes.py  compare_strategies.py  export_route.py  fetch_data.py  generate_map.py  geocode_cache.py  geocode_google.py  map_template.html  optimize_routes.py  ortools_routes.py
website/: 2026-routes-map.html  christmas-tree-recycling.html  error.html  index.html  qr-code-1.html  route-tools.html  styles.css
website/routes/2025/: 2025-routes-map.html
website/routes/2026/: 2026-routes-map.html  Route-A.html  Route-AA.html  Route-AB.html  Route-B.html  Route-C.html  Route-D.html  Route-E.html  Route-F.html  Route-G.html  Route-H.html  Route-I.html  Route-J.html  Route-K.html  Route-L.html  Route-M.html  Route-N.html  Route-O.html  Route-P.html  Route-Q.html  Route-R.html  Route-S.html  Route-T.html  (+6 more)
