[project]
name = "tree-recycling-routes"
version = "0.1.0"
description = "Automated route building for Christmas tree recycling"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.1.2",
    "google-auth>=2.35.0",
    "pandas>=2.2.0",
    "ortools>=9.11.0",
    "geopy>=2.4.0",
    "matplotlib>=3.9.0",
    "googlemaps>=4.10.0",
    "folium>=0.20.0",
    "scikit-learn>=1.8.0",
    "reportlab>=4.4.6",
    "qrcode>=8.2",
    "pillow>=12.0.0",
]

[tool.uv]
dev-dependencies = []
